feat: endpoint to detail an institution
