# src/dto/institution/get-by-id.dto.ts
@@ -1,0 +1,15 @@
+import { User } from '@prisma/client'
+
+export interface InputGetInstitutionByIdDto {
+  institutionId: number
+  userId: number
+}
+
+export interface OutputGetInstitutionByIdDto {
+  id: number
+  name: string
+  nickname: string | null
+  description: string | null
+  managerId: number
+  manager: User
+}
