# swagger.json
@@ -415,6 +415,25 @@
             }
           }
         }
+      },
+      "get": {
+        "tags": [
+          "Institutions"
+        ],
+        "summary": "Detalhar instituição",
+        "description": "Detalhes da instituição",
+        "parameters": [
+          {
+            "description": "ID referente á instituição",
+            "name": "institutionId",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "integer",
+              "example": 1
+            }
+          }
+        ]
       }
     },
     "/institution/{institutionId}/activate": {
